[tool.poetry]
name = "cipher_liao_ziqi"
version = "0.1.0"
description = "Python package practice."
authors = ["Ziqi Liao <zl2988@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
